# LightningRL

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  q-learning.py  readme.md
algorithms/C51/: cartpole_C51_lightning.py
algorithms/DDQN/: cartpole_ddqn_lightning.py
algorithms/DQN/: cartpole_lightning.py  frozenlake_8x8_lightning.py  frozenlake_8x8_torch.py
algorithms/DuelingDQN/: cartpole_lightning_DuelingDQN.py
algorithms/PER/: cartpole_per_lightning.py
algorithms/QR-DQN/: cartpole_QR_DQN_lightning.py
algorithms/q-learning/: frozenlake.py  frozenlake_np.py
lightning_dqn_frozenlake/dkhvdmd6/checkpoints/: epoch=1-step=16730.ckpt
lightning_dqn_frozenlake/nkqaqw93/checkpoints/: epoch=1-step=17296.ckpt
lightning_logs/version_21/: metrics.csv
lightning_logs/version_22/: metrics.csv
lightning_logs/version_23/: metrics.csv
lightning_logs/version_25/: metrics.csv
lightning_logs/version_26/: metrics.csv
lightning_logs/version_29/: metrics.csv
lightning_logs/version_30/: metrics.csv
lightning_logs/version_44/: metrics.csv
lightning_logs/version_44/checkpoints/: epoch=1-step=16628.ckpt
lightning_logs/version_45/: metrics.csv
