[tool.poetry]
name = "lightningrl"
version = "0.1.0"
description = ""
authors = ["Serotina <wlsdn2749@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
wandb = "^0.18.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
